--- a/configs/dino/dino-rn50.yaml
+++ b/configs/dino/dino-rn50.yaml
@@ -18,7 +18,7 @@ params:
 
   # parameters for the Hungarian Matcher
   matcher:
-    type: "hungarian"
+    type: "Hungarian"
     set_cost_class: 2.0
     set_cost_bbox: 5.0
     set_cost_giou: 2.0
@@ -33,7 +33,7 @@ params:
     cls_loss_coef: 1.0
     bbox_loss_coef: 5.0
     giou_loss_coef: 2.0
-    iterm_loss_ceof: 1.0
+    interm_loss_coef: 1.0
 
   # TODO: comment
   postprocess:
@@ -82,8 +82,6 @@ params:
       learn_wh: False
       keep_all_tokens: False
       two_stage_default_hw: 0.05
-      bbox_embed_share: False
-      class_embed_share: False
 
     denoising:
       # Number of denoising_queries for an image; will be evenly distributed to each GT object 
@@ -113,11 +111,11 @@ params:
       # number of attention heads in the transformer encoder/decoder
       num_heads: 8
 
-      # Number of learnable object queries that are input into the decoder; maximum number of object 
+      # number of learnable object queries that are input into the decoder; maximum number of object 
       # predictions dino will produce (each a bounding box and class)
       num_queries: 900
 
-      # Number of deformable transformer encoder/decoder layers to use
+      # number of deformable transformer encoder/decoder layers to use
       num_encoder_layers: 6
       num_decoder_layers: 6
       num_unicoder_layers: 0 # ? not sure what this is
