--- a/configs/rt-detrv2/rtdetrv2-rn50-model.yaml
+++ b/configs/rt-detrv2/rtdetrv2-rn50-model.yaml
@@ -1,57 +1,78 @@
-RTDETR: 
-  backbone: PResNet
-  encoder: HybridEncoder
-  decoder: RTDETRTransformerv2
-  
+name: "rtdetrv2"
 
-PResNet:
-  depth: 50
-  variant: d
-  freeze_at: 0
-  return_idx: [1, 2, 3]
-  num_stages: 4
-  freeze_norm: True
-  pretrained: True
+params:
 
 
-HybridEncoder:
-  in_channels: [512, 1024, 2048]
-  feat_strides: [8, 16, 32]
+  RTDETR: 
+    backbone: PResNet
+    encoder: HybridEncoder
+    decoder: RTDETRTransformerv2
 
-  # intra
-  hidden_dim: 256
-  use_encoder_idx: [2]
-  num_encoder_layers: 1
-  nhead: 8
-  dim_feedforward: 1024
-  dropout: 0.
-  enc_act: 'gelu'
-  
-  # cross
-  expansion: 1.0
-  depth_mult: 1
-  act: 'silu'
+    # what this?
+    eval_spatial_size: [640, 640] # [h, w]
+
+    
+  PResNet:
+    depth: 50
+    variant: d
+    freeze_at: 0
+    return_idx: [1, 2, 3]
+    num_stages: 4
+    freeze_norm: True
+    pretrained: True
+    act: relu
 
 
-RTDETRTransformerv2:
-  feat_channels: [256, 256, 256]
-  feat_strides: [8, 16, 32]
-  hidden_dim: 256
-  num_levels: 3
+  HybridEncoder:
+    version: v2
+    in_channels: [512, 1024, 2048]
+    feat_strides: [8, 16, 32]
 
-  num_layers: 6
-  num_queries: 300
+    # intra
+    hidden_dim: 256
+    use_encoder_idx: [2]
+    num_encoder_layers: 1
+    nhead: 8
+    dim_feedforward: 1024
+    dropout: 0.
+    enc_act: 'gelu'
+    
+    # cross
+    expansion: 1.0
+    depth_mult: 1
+    act: 'silu'
 
-  num_denoising: 100
-  label_noise_ratio: 0.5
-  box_noise_scale: 1.0 # 1.0 0.4
+    # positonal encoding
+    pe_temperature: 10000
 
-  eval_idx: -1
 
-  # NEW
-  num_points: [4, 4, 4] # [3,3,3] [2,2,2]
-  cross_attn_method: default # default, discrete
-  query_select_method: default # default, agnostic 
+
+  RTDETRTransformerv2:
+    feat_channels: [256, 256, 256]
+    feat_strides: [8, 16, 32]
+    hidden_dim: 256
+    num_levels: 3
+
+    num_layers: 6
+    dim_feedforward: 1024
+    num_queries: 300
+    dropout: 0.
+    actitvation: relu
+
+    num_denoising: 100
+    label_noise_ratio: 0.5
+    box_noise_scale: 1.0 # 1.0 0.4
+
+    aux_loss: True
+
+    eval_idx: -1
+    eps: 1.e-2
+
+    # NEW
+    num_points: [4, 4, 4] # [3,3,3] [2,2,2]
+    cross_attn_method: default # default, discrete
+    query_select_method: default # default, agnostic
+    learn_query_content: False
 
 postprocessor:
   num_top_queries: 300
