--- a/configs/rt-detrv2/solver.yaml
+++ b/configs/rt-detrv2/solver.yaml
@@ -1,6 +1,13 @@
-# TODO: update for RT detr
 # solver params: optimzer, lr scheduler, etc.
 solver:
+
+  # Keeps a running exponentially moving average model used during 
+  # evaluation
+  use_ema: True
+  ema_params:
+    decay: 0.9999
+    warmups: 2000
+
   # the method for extracting parameters from the model; 
   # see solvers.build.get_optimizer_parameters() for more info
   parameter_strategy: "rtdetrv2" 
@@ -34,4 +41,4 @@ solver:
       milestones: [3000] # (1000 steps after the warmup?) TODO might need to change this
       gamma: 0.1
       warmup_t: 2000
-      t_in_epochs: False
+      t_in_epochs: False # timesteps are in steps
