--- a/configs/rt-detrv2/rtdetrv2-rn50-model.yaml
+++ b/configs/rt-detrv2/rtdetrv2-rn50-model.yaml
@@ -10,7 +10,7 @@ params:
     # what this?
     eval_spatial_size: [640, 640] # [h, w]
 
-    
+
   PResNet:
     depth: 50
     variant: d
@@ -88,6 +88,7 @@ criterion:
 
   matcher:
     type: HungarianMatcher
-    weight_dict: {cost_class: 2, cost_bbox: 5, cost_giou: 2}
-    alpha: 0.25
-    gamma: 2.0
+    params:
+      weight_dict: {cost_class: 2, cost_bbox: 5, cost_giou: 2}
+      alpha: 0.25
+      gamma: 2.0
