--- a/configs/datasets/coco-2017.yaml
+++ b/configs/datasets/coco-2017.yaml
@@ -49,7 +49,8 @@ train_dataloader:
   # Number of CPU processes the next sample in the dataset; use 0 to only use the main process
   num_workers: 2 # TODO: this could be why I'm running out of memory at num_worker=4
 
-  batch_size_per_gpu: 2
+  batch_size_per_gpu: 4
+  effective_batch_size: 16
   shuffle: True
 
 val_dataloader:
